# Magic-IDE

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  build.sh
include/: async_ipc.h  config.h  file_manager.h  ipc.h  logger.h  lsp.h  memory_pool.h  plugin_manager.h  terminal.h  webview.h
src/: async_ipc.c  config.c  file_manager.c  ipc.c  logger.c  lsp.c  main.c  memory_pool.c  plugin_manager.c  terminal.c  webview.c
tests/: test_file_manager.c
web/: index.html
web/css/: main.css
web/js/: app.js
